--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -1,6 +1,11 @@
 ﻿Release notes:
 ==============
 
+Version: 19.17.0
+================
+- added the public function: Initialize() in the StreetSmartAPIFactory class
+
+
 Version: 19.16.0
 ================
 - reverted to Cefsharp version 73.1.130 because of some problems with the ArcGisPro integration of version 75.1.142 of Cefsharp
