--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -4,6 +4,7 @@
 Version: 19.17.0
 ================
 - added the public function: Initialize() in the StreetSmartAPIFactory class
+- added the 'resolution' part to the geoJson measurements
 
 
 Version: 19.16.0
