STREET-2527: updated release notes

--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -5,6 +5,7 @@
 Version: 19.18.0
 ================
 - Implemented all the point cloud functions + events + viewers
+- Improved parsing of geoJson layers + exception handling
 
 
 Version: 19.17.0
