--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -6,6 +6,7 @@ Version: 19.19.0
 - fixed some geojson generation with polygons, triangolation wasn't working
 - in case of a WPF API, show and close developer tools are running now in the UI thread
 - pass an optional measure method to the start measurement call
+- feet / metric toggle (SetUnitPreference / GetUnitPreference)
 
 
 Version: 19.18.0
