--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -7,6 +7,7 @@ Version: 19.19.0
 - in case of a WPF API, show and close developer tools are running now in the UI thread
 - pass an optional measure method to the start measurement call
 - feet / metric toggle (SetUnitPreference / GetUnitPreference)
+- enable / disable shortcuts (enableShortcut / disableShortcut)
 
 
 Version: 19.18.0
