STREET-3208: new version of the .net api

--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -1,12 +1,10 @@
 ﻿Release notes:
 ==============
 
-Version: 20.9.0
+Version 21.1.0
 ================
-
-
-Version: 20.8.0
-================
+- added Aerial point cloud support (including interface functions)
+- it is posible for add a layer which is standard turned off
 
 
 Version: 20.6.0
