updated to V23.8 + fixed 2 parsing bugs

--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -1,6 +1,12 @@
 ﻿Release notes:
 ==============
 
+Version 23.8.0
+================
+- Fixed bug parsing mearurement changed
+- Added the meshviewer object
+
+
 Version 23.7.0
 ================
 - Removed hight dpi support
