--- a/StreetSmartAPI/StreetSmart.API/WPF/Properties/Resources.resx
+++ b/StreetSmartAPI/StreetSmart.API/WPF/Properties/Resources.resx
@@ -130,6 +130,7 @@
     <value />
   </data>
   <data name="StreetSmartLocation" xml:space="preserve">
-    <value>https://streetsmart.cyclomedia.com/api/v24.1/api-dotnet.html</value>
+    <!--<value>https://streetsmart.cyclomedia.com/api/v24.1/api-dotnet.html</value>-->
+	  <value>http://localhost:8081/api.html</value>
   </data>
 </root>
