--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -1,6 +1,14 @@
 ﻿Release notes:
 ==============
 
+Version 24.4.0
+================
+- Connected to the Street Smart 24.4 API
+- Implemented new methods for managing OAuth configuration and usage
+- Added API Init configuration options: LoginOauthSilentOnly, DoOAuthLogoutOnDestroy 
+- Added method: GetBearerToken
+- Added event: BearerTokenChanged
+
 Version 24.1.1
 ================
 - Target framework .net 4.6.2 and .net 6.0 windows
