ESRI-306: - updated ReleaseNotes.txt - updated copy locales to target path

--- a/StreetSmartAPI/ReleaseNotes.txt
+++ b/StreetSmartAPI/ReleaseNotes.txt
@@ -1,6 +1,14 @@
 ﻿Release notes:
 ==============
 
+Version 25.4.0
+================
+- Updated to Street Smart API 25.4
+- Updated chefsharp to the latest version
+- Updated to .NET 8.0
+- Updated other libraries to the latest versions
+
+
 Version 24.4.0
 ================
 - Connected to the Street Smart 24.4 API
